# fastapi-boilerplate

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  _toml.py  app.py  config.ini  config.toml  config.yaml  dbtest.py  docker-compose.yml  emailtest.py  index.html  lc.py  main.py  mkdocs.yml  mypy.ini  piccolo_conf.py  pyproject.toml  requirements.txt  run.py  secret.key  secret.key1  sitemap.xml  vault-cluster-vault-2022-07-06T18 47 09.634Z.json  vault.keys
.github/workflows/: apisec-scan.yml  ci.yml  codeql-analysis.yml  python-app.yml
accounting/: __init__.py  auth.py  decorators.py  endpoints.py  models.py  piccolo_app.py  routing.py  schemas.py
accounting/authentication/: endpoints.py  jwt.py  models.py  routing.py  schemas.py
accounting/groups/: endpoints.py  models.py  routing.py  schemas.py
accounting/piccolo_migrations/: 2022-06-30T22-56-56-669817.py  2022-06-30T22-57-36-587096.py  2022-07-02T19-04-40-200864.py  2022-07-03T16-25-35-600584.py  2022-07-05T21-47-29-035764.py  2022-07-05T22-00-49-820246.py  2022-07-05T22-01-46-499917.py  2022-07-05T22-32-20-035973.py  2022-07-15T14-58-35-521868.py  2022-07-26T22-05-43-608806.py  2022-07-28T14-24-14-903230.py  2022-07-28T14-51-35-460431.py  2022-08-02T15-36-00-644882.py  2022-08-02T15-45-23-560625.py  2022-08-02T15-46-54-565956.py  2022-08-08T14-30-32-485481.py  2022-08-09T13-44-24-851577.py  2022-08-09T13-45-13-084284.py  2022-08-09T13-54-26-519696.py  2022-08-09T15-44-41-601377.py  2022-08-09T15-44-57-005710.py  2022-08-15T10-27-17-335668.py  2022-08-15T10-27-53-474578.py  2022-08-16T11-14-41-221323.py  2022-08-16T11-14-55-725332.py  2022-08-16T11-37-04-069017.py  2022-08-16T11-37-32-943971.py  2022-08-16T11-39-39-577518.py  2022-08-16T11-40-31-792022.py  2022-08-16T11-43-06-663339.py  2022-08-16T11-43-50-729518.py  2022-08-16T11-46-59-838629.py  2022-08-16T11-47-34-295257.py  2022-08-16T11-48-01-085129.py  2022-08-16T11-48-11-459840.py  2022-08-16T11-52-48-242024.py  2022-08-16T11-53-00-703258.py  2022-08-16T11-54-52-902410.py  2022-08-16T11-55-15-275779.py  2022-08-16T11-55-26-956486.py  (+8 more)
accounting/rbac/: __init__.py  checks.py  endpoints.py  models.py  routing.py  schemas.py
accounting/roles/: __init__.py  endpoints.py  models.py  routing.py  schemas.py
accounting/users/: __init__.py  endpoints.py  models.py  routing.py  (+1 more)
ci/: init_db.py  init_vault.py
cli/: __init__.py  accounting.py  config_loader.py  console.py  db.py  index.html  vault.py
configuration/: __init__.py  base.py  loader.py  model.py  piccolo_app.py  sections.py
context/: __init__.py
docs/: cli.md  index.md
src/: app.py  config.ini  config.toml  config.yaml  config2.toml  main.py  piccolo_conf.py  run.py
tests/: cli_test.py  main_test.py  payload_models.py  payloads.py  shared.py
utils/: __init__.py  __vault.py  api_versioning.py  crypto.py  events.py  exceptions.py  id_propagation.py  logger.py  piccolo.py  routing.py  telemetry.py  vault.py
(+100 files in other folders)
