[tool.poetry]
name = "fastapi-boilerplate"
version = "1.8.0"
description = ""
authors = ["northpowered <northpowered@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "0.8.0"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
aiosqlite = "0.17.0"
anyio = "3.6.1"
asgiref = "3.5.2"
asttokens = "2.0.5"
async-hvac-fork = "0.6.1"
async-timeout = "4.0.2"
asyncpg = "0.25.0"
attrs = "21.4.0"
autopep8 = "1.6.0"
backcall = "0.2.0"
black = "22.6.0"
certifi = "2022.6.15"
cffi = "1.15.1"
chardet = "3.0.4"
charset-normalizer = "2.1.0"
click = "8.1.3"
colorama = "0.4.5"
commonmark = "0.9.1"
cryptography = "37.0.2"
decorator = "5.1.1"
Deprecated = "1.2.13"
dnspython = "2.2.1"
docstring-parser = "0.12"
ecdsa = "0.17.0"
email-validator = "1.2.1"
executing = "0.8.3"
fastapi = "0.78.0"
frozenlist = "1.3.0"
googleapis-common-protos = "1.56.1"
greenlet = "1.1.2"
grpcio = "1.47.0"
h11 = "0.12.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "0.15.0"
httptools = "0.4.0"
httpx = "0.23.0"
hypercorn = "0.13.2"
hyperframe = "6.0.1"
idna = "3.3"
inflection = "0.5.1"
ipython = "8.4.0"
itsdangerous = "2.1.2"
jedi = "0.18.1"
Jinja2 = "3.1.2"
loguru = "0.6.0"
MarkupSafe = "2.1.1"
matplotlib-inline = "0.1.3"
multidict = "4.7.6"
mypy = "0.961"
mypy-extensions = "0.4.3"
opentelemetry-api = "1.12.0rc2"
opentelemetry-exporter-jaeger = "1.12.0rc2"
opentelemetry-exporter-jaeger-proto-grpc = "1.12.0rc2"
opentelemetry-exporter-jaeger-thrift = "1.12.0rc2"
opentelemetry-instrumentation = "0.32b0"
opentelemetry-instrumentation-asgi = "0.32b0"
opentelemetry-instrumentation-fastapi = "0.32b0"
opentelemetry-sdk = "1.12.0rc2"
opentelemetry-semantic-conventions = "0.32b0"
opentelemetry-util-http = "0.32b0"
orjson = "3.7.5"
parso = "0.8.3"
pathspec = "0.9.0"
pexpect = "4.8.0"
piccolo = "0.82.0"
piccolo-admin = "0.27.0"
piccolo-api = "0.40.0"
pickleshare = "0.7.5"
platformdirs = "2.5.2"
priority = "2.0.0"
prometheus-client = "0.14.1"
prompt-toolkit = "3.0.30"
protobuf = "4.21.2"
psycopg2 = "2.9.3"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.4.8"
pycodestyle = "2.9.0"
pycparser = "2.21"
pydantic = "1.9.1"
pydot = "1.4.2"
Pygments = "2.12.0"
PyJWT = "2.4.0"
pyparsing = "3.0.9"
python-dotenv = "0.20.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
PyYAML = "6.0"
requests = "2.28.1"
rfc3986 = "1.5.0"
rich = "12.5.1"
rsa = "4.8"
six = "1.16.0"
sniffio = "1.2.0"
stack-data = "0.3.0"
starlette = "0.19.1"
starlette-exporter = "0.13.0"
targ = "0.3.7"
thrift = "0.16.0"
toml = "0.10.2"
tomli = "2.0.1"
traitlets = "5.3.0"
typer = "0.5.0"
typing-extensions = "4.2.0"
ujson = "5.4.0"
urllib3 = "1.26.9"
uvicorn = "0.17.6"
uvloop = "0.16.0"
watchgod = "0.8.2"
wcwidth = "0.2.5"
websockets = "10.3"
wrapt = "1.14.1"
wsproto = "1.1.0"
yarl = "1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
